Fix Safari/Mac bug where active state on button turns it white and hard to see

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -207,6 +207,10 @@ footer {
   cursor: pointer;
 }
 
+.chat-bubble:active {
+  color: black;
+}
+
 .entry {
   display: flex;
   flex-direction: row;
